NetworkMangaer ignores lease file and fails DHCP when dhcp server is down
If the DHCP server is down and client reboot during the server down time, client won't be able to get a valid ip address, even though the DHCP lease is still valid.
But "man dhclient-script" says:
TIMEOUT The DHCP client has been unable to contact any DHCP servers. However, an old lease has been identified, and its parameters have been passed in as with BOUND. The client configuration script should test these parameters and, if it has reason to believe they are valid, should exit with a value of zero. If not, it should exit with a nonzero value.
NetworkManager needs to better handle the timeout reason instead of just fail it directly.