dhcp-client: Support using valid lease configuration on timeout

dhclient checks lease file on timeout. If they are still valid, the ip
configs will be used. While currently NetworkManager directly fails
the dhcp configuration once timeout is reached.

Fix that by using ip configs found in the valid lease file on timeout,
when dhclient is the dhcp backend.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/682