src/core/dhcp/nm-dhcp-dhcpcd.c
@@ -158,6 +158,7 @@ ip4_start(NMDhcpClient *client,
     nm_assert(pid > 0);
     _LOGI("dhcpcd started with pid %d", pid);
     nm_dhcp_client_watch_child(client, pid);
+    nm_dhcp_client_start_timeout(self);
     return TRUE;
 }
 
